--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,3 +7,9 @@ spring:
     generate-ddl: true
     hibernate:
       ddl-auto: update
+currency:
+  USD: 1
+  RUB: 73.5
+  EUR: 1.1
+app:
+  loan_coefficient: 2
