--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <lombok.version>1.18.24</lombok.version>
         <gson.version>2.10</gson.version>
         <rest-assured.version>5.3.0</rest-assured.version>
+        <thymeleaf.version>3.1.1.RELEASE</thymeleaf.version>
     </properties>
 
     <dependencies>
@@ -112,6 +113,18 @@
             <artifactId>rest-assured</artifactId>
             <version>${rest-assured.version}</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf</artifactId>
+            <version>${thymeleaf.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf-spring6</artifactId>
+            <version>${thymeleaf.version}</version>
         </dependency>
     </dependencies>
 
