--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>catalog-film</description>
 	<properties>
 		<java.version>17</java.version>
+		<modelmapper.version>3.0.0</modelmapper.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -53,6 +54,14 @@
 			<artifactId>node-uuid</artifactId>
 			<version>1.4.7</version>
 		</dependency>
+
+
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>${modelmapper.version}</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
