--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<description>catalog-film</description>
 	<properties>
 		<java.version>17</java.version>
-		<modelmapper.version>3.0.0</modelmapper.version>
+		<modelmapper.version>3.1.1</modelmapper.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -65,8 +65,20 @@
 			<version>6.0.2</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-hystrix -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-hystrix</artifactId>
+			<version>1.2.1.RELEASE</version>
+		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.plugin</groupId>
+			<artifactId>spring-plugin-core</artifactId>
+			<version>2.0.0.RELEASE</version>
+		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-netflix-hystrix-dashboard -->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
